package com.telenav.kivakit.ui.swing.layout;

/**
 * @author jonathanl (shibo)
 */
public enum Spacing
{
    AUTOMATIC_SPACING,
    MANUAL_SPACING
}
